--- a/about.html
+++ b/about.html
@@ -19,17 +19,19 @@
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
-                        margin-left: 14px;
-                        width: 150px;
-                        font-size: 16px;
-                        font-weight: 100;">RM Constructions<p style="
-                        width: 200px;
-                        font-size: 15px;
-                        font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
-                </a>
-                </a>
+                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px">
+                        <span style="margin-top: 12px;
+                            margin-left: 15px;
+                            width: 150px;
+                            font-size: 18px;
+                            font-weight: 300;">RM Constructions
+                            <p style="
+                            width: 200px;
+                            font-size: 16px;
+                            font-family: 'Lato', sans-serif;
+    font-weight: 800;">Builders & Flat Promoters</p>
+                        </span>
+                    </a>
                     <nav class="header_navbar-nav">
                         <ul class="header_navbar-nav_list">
                             <li class="list-item">
@@ -159,7 +161,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                             </li>
                             <li class="hero_header-list_item d-flex align-items-center" data-aos="fade-up" data-aos-delay="40">
                                 <i class="icon-arrow_right icon"></i>
-                                RMC Corporate Website
+                                 RMC Nesaroy Mahal
                             </li>
                             <!-- <li class="hero_header-list_item d-flex align-items-center" data-aos="fade-up" data-aos-delay="40">
                                 <i class="icon-arrow_right icon"></i>
@@ -885,20 +887,20 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                     <div class="author d-flex align-items-center">
                                         <picture>
                                             <source
-                                                data-srcset="img/placeholder.jpg"
-                                                srcset="img/placeholder.jpg"
-                                                type="image/webp"
+                                                data-srcset="img/home/about/1.jpeg"
+                                                srcset="img/home/about/1.jpeg"
+                                                type="image/jpg"
                                             />
                                             <img
                                                 class="avatar lazy"
-                                                data-src="img/placeholder.jpg"
-                                                src="img/placeholder.jpg"
+                                                data-src="img/home/about/1.jpeg"
+                                                src="img/home/about/1.jpeg"
                                                 alt="Vera Robinson"
                                             />
                                         </picture>
                                         <div class="wrapper">
                                             <span class="name">Sathish </span>
-                                            <span class="profession">Doctor, UK</span>
+                                            <span class="profession">Software Engineer</span>
                                         </div>
                                     </div>
                                 </div>
@@ -928,20 +930,20 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                     <div class="author d-flex align-items-center">
                                         <picture>
                                             <source
-                                                data-srcset="img/placeholder.jpg"
-                                                srcset="img/placeholder.jpg"
-                                                type="image/webp"
+                                                data-srcset="img/home/about/2.jpeg"
+                                                srcset="img/home/about/2.jpeg"
+                                                type="image/jpeg"
                                             />
                                             <img
                                                 class="avatar lazy"
-                                                data-src="img/placeholder.jpg"
-                                                src="img/placeholder.jpg"
+                                                data-src="img/home/about/2.jpeg"
+                                                src="img/home/about/2.jpeg"
                                                 alt="Benjamin Norris"
                                             />
                                         </picture>
                                         <div class="wrapper">
                                             <span class="name">Santhosh Ramachandran</span>
-                                            <span class="profession">Business, Australia</span>
+                                            <span class="profession">Chartered Accountant</span>
                                         </div>
                                     </div>
                                 </div>
@@ -971,20 +973,20 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                     <div class="author d-flex align-items-center">
                                         <picture>
                                             <source
-                                                data-srcset="img/placeholder.jpg"
-                                                srcset="img/placeholder.jpg"
+                                                data-srcset="img/home/about/4.webp"
+                                                srcset="img/home/about/4.webp"
                                                 type="image/webp"
                                             />
                                             <img
                                                 class="avatar lazy"
-                                                data-src="img/placeholder.jpg"
-                                                src="img/placeholder.jpg"
+                                                data-src="img/home/about/4.webp"
+                                                src="img/home/about/4.webp"
                                                 alt="Lisa Smith"
                                             />
                                         </picture>
                                         <div class="wrapper">
-                                            <span class="name">Shilpa Muthukumar</span>
-                                            <span class="profession">IT Manager, Chennai</span>
+                                            <span class="name">Dr. Maragathaman</span>
+                                            <span class="profession">General Physician Doctor, Chennai</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1014,14 +1016,14 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                                     <div class="author d-flex align-items-center">
                                         <picture>
                                             <source
-                                                data-srcset="img/placeholder.jpg"
-                                                srcset="img/placeholder.jpg"
-                                                type="image/webp"
+                                                data-srcset="img/home/about/3.jpeg"
+                                                srcset="img/home/about/3.jpeg"
+                                                type="image/jpeg"
                                             />
                                             <img
                                                 class="avatar lazy"
-                                                data-src="img/placeholder.jpg"
-                                                src="img/placeholder.jpg"
+                                                data-src="img/home/about/3.jpeg"
+                                                src="img/home/about/3.jpeg"
                                                 alt="John Doe"
                                             />
                                         </picture>
@@ -1051,19 +1053,19 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
             <div class="container">
                 <div class="footer_main d-flex flex-wrap justify-content-md-between col-12">
                     <div class="footer_main-block col-sm-12 col-xl-auto">
-                        <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
+              
                             <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px"><span style="margin-top: 12px;
                         margin-left: 14px;
                         width: 150px;
-                        font-size: 16px;
+                        font-size: 18px;
                         font-weight: 100;">RM Constructions<p style="
                         width: 175px;
-                        font-size: 15px;
+                        font-size: 16px;
                         font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
+font-weight: 800;">Builders & Flat Promoters</p></span>
                 </a>
-                        </a>
+                
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
                             What we build today should last for generations to come. We should embrace the purpose of the construction and live with its value.
                         </p>
