--- a/contacts2.html
+++ b/contacts2.html
@@ -19,17 +19,19 @@
             <div class="header_navbar">
                 <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
-                        margin-left: 14px;
-                        width: 300px;
-                        font-size: 16px;
-                        font-weight: 100;">RM Constructions<p style="
-                        width: 300px;
-                        font-size: 15px;
-                        font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
-                </a>
-                </a>
+                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px">
+                        <span style="margin-top: 12px;
+                            margin-left: 15px;
+                            width: 150px;
+                            font-size: 18px;
+                            font-weight: 300;">RM Constructions
+                            <p style="
+                            width: 200px;
+                            font-size: 16px;
+                            font-family: 'Lato', sans-serif;
+    font-weight: 800;">Builders & Flat Promoters</p>
+                        </span>
+                    </a>
                     <nav class="header_navbar-nav">
                         <ul class="header_navbar-nav_list">
                             <li class="list-item">
@@ -241,17 +243,15 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                 <div class="footer_main d-flex flex-wrap justify-content-md-between col-12">
                     <div class="footer_main-block col-sm-12 col-xl-auto">
                         <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                            <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
-                        margin-left: 14px;
-                        width: 300px;
-                        font-size: 16px;
-                        font-weight: 100;">RM Constructions<p style="
-                        width: 300px;
-                        font-size: 15px;
-                        font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
-                </a>
+                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px"><span style="margin-top: 12px;
+                                margin-left: 14px;
+                                width: 150px;
+                                font-size: 18px;
+                                font-weight: 100;">RM Constructions<p style="
+                                width: 175px;
+                                font-size: 16px;
+                                font-family: 'Lato', sans-serif;
+        font-weight: 800;">Builders & Flat Promoters</p></span>
                         </a>
                         <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
                             Libero volutpat sed cras ornare arcu dui vivamus. Ac tortor dignissim convallis aenean et tortor at risus
