--- a/services.html
+++ b/services.html
@@ -62,16 +62,18 @@
         <div class="header_navbar">
             <div class="container d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-between">
                 <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
-                        margin-left: 14px;
+                    <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px">
+                    <span style="margin-top: 12px;
+                        margin-left: 15px;
                         width: 150px;
-                        font-size: 16px;
-                        font-weight: 100;">RM Constructions<p style="
+                        font-size: 18px;
+                        font-weight: 300;">RM Constructions
+                        <p style="
                         width: 200px;
-                        font-size: 15px;
+                        font-size: 16px;
                         font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
-                </a>
+font-weight: 800;">Builders & Flat Promoters</p>
+                    </span>
                 </a>
                 <nav class="header_navbar-nav">
                     <ul class="header_navbar-nav_list">
@@ -184,15 +186,17 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                     <h2 class="title" data-aos="fade-right" data-aos-duration="500">Services</h2>
                 </div>
                 <ul class="services_list row g-0">
+                   
                     <li class="services_list-item col-12 col-md-6 col-xxl-6" data-aos="fade-up" data-order="1">
                         <div class="wrapper d-flex flex-column align-items-start justify-content-between">
                             <span class="number">01</span>
-                            <h4 class="title">Contractors </h4>
+                            <h4 class="title">Promotors</h4>
                             <p class="description">
-                                We implement the best in class standards in our construction projects. Our guiding
-                                principles helps our customers to achieve thier dream projects.
+                                We promote Flats & Individual bungalows all around India. Having successfully
+                                constructed more than a Lakh square feet of living space with consistent quality and
+                                latest building trends.
                             </p>
-                            <a class="link link-arrow" href="contracts.html">
+                            <a class="link link-arrow" href="promoter.html">
                                 Details
                                 <i class="icon-arrow_right"></i>
                             </a>
@@ -201,13 +205,12 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                     <li class="services_list-item col-12 col-md-6 col-xxl-6" data-aos="fade-up" data-order="2">
                         <div class="wrapper d-flex flex-column align-items-start justify-content-between">
                             <span class="number">02</span>
-                            <h4 class="title">Promotors</h4>
+                            <h4 class="title">Contractors </h4>
                             <p class="description">
-                                We promote Flats & Individual bungalows all around India. Having successfully
-                                constructed more than a Lakh square feet of living space with consistent quality and
-                                latest building trends.
+                                We implement the best in class standards in our construction projects. Our guiding
+                                principles helps our customers to achieve thier dream projects.
                             </p>
-                            <a class="link link-arrow" href="promoter.html">
+                            <a class="link link-arrow" href="contracts.html">
                                 Details
                                 <i class="icon-arrow_right"></i>
                             </a>
@@ -282,7 +285,7 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
                         </h2>
                         <p class="text">
                             RM Constructions has established a stronghold in South India with its presence along the key
-                            cities and townships. We have excecuted over 200+ projects, ranging from Flats, Commercial
+                            cities and townships. We have excecuted over 150+ projects, ranging from Flats, Commercial
                             Complexes, Institutions, Residential Buildings, Villas and Educational Institutions. Our
                             portfolio is our record of quality, consistency and delivery.
                         </p>
@@ -545,17 +548,15 @@ font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
             <div class="footer_main d-flex flex-wrap justify-content-md-between col-12">
                 <div class="footer_main-block col-sm-12 col-xl-auto">
                     <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                        <a class="brand d-inline-flex align-items-center justify-content-center" href="index.html">
-                            <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="50px"><span style="margin-top: 12px;
-                        margin-left: 14px;
-                        width: 150px;
-                        font-size: 16px;
-                        font-weight: 100;">RM Constructions<p style="
-                        width: 175px;
-                        font-size: 15px;
-                        font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;">Builders & Promoters</p></span>
-                        </a>
+                        <img src="/img/home/Logos/RMCWHite.png" alt="rmc-logo" height="60px"><span style="margin-top: 12px;
+                            margin-left: 14px;
+                            width: 150px;
+                            font-size: 18px;
+                            font-weight: 100;">RM Constructions<p style="
+                            width: 175px;
+                            font-size: 16px;
+                            font-family: 'Lato', sans-serif;
+    font-weight: 800;">Builders & Flat Promoters</p></span>
                     </a>
                     <p class="footer_main-block_subtitle footer_main-block_subtitle--brand">
                         What we build today should last for generations to come. We should embrace the purpose of the construction and live with its value.
