--- a/gallery-masonry.html
+++ b/gallery-masonry.html
@@ -15,6 +15,24 @@
         
         <link rel="stylesheet" href="css/gallery-masonry.min.css" />
         <link rel="stylesheet" href="css/projects.min.css" />
+        <style>
+            .dad-image{
+                border-radius: 50%;
+                border:2px solid #ffc631; 
+                position: fixed;
+                margin-top: -24px;
+                margin-left: 10px;
+                width:70px;
+                 height:70px;
+            }
+            @media screen and (max-width:768px) {
+                .dad-image{
+                    margin-top: -270px;
+                    right: 0;
+                    margin-right: 20px;
+                }
+            }
+        </style>
     </head>
     <body>
         <header class="header primary-bg" data-page="gallery-masonry">
@@ -26,7 +44,7 @@
                             margin-left: 15px;
                             width: 150px;
                             font-size: 18px;
-                            font-weight: 300;">RM Constructions
+                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
                             <p style="
                             width: 200px;
                             font-size: 16px;
@@ -1791,7 +1809,7 @@
                                 margin-left: 14px;
                                 width: 150px;
                                 font-size: 18px;
-                                font-weight: 100;">RM Constructions<p style="
+                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
                                 width: 175px;
                                 font-size: 16px;
                                 font-family: 'Lato', sans-serif;
