--- a/index.html
+++ b/index.html
@@ -20,12 +20,47 @@
     <link rel="stylesheet" href="css/index.min.css" />
 
     <style>
+        .dad-image{
+            border-radius: 50%;
+            border:2px solid #ffc631; 
+            position: fixed;
+            margin-top: -24px;
+            margin-left: 10px;
+            width:70px;
+             height:70px;
+        }
         @media screen and (max-width:768px) {
             .hero_container{
                 margin-top: 100px!important;
             }
+            .resp-name{
+                font-size: 12px;
+            }
+            .dad-image{
+                margin-top: -270px;
+                right: 0;
+                margin-right: 20px;
+            }
         }
     </style>
+        <style>
+            .dad-image{
+                border-radius: 50%;
+                border:2px solid #ffc631; 
+                position: fixed;
+                margin-top: -24px;
+                margin-left: 10px;
+                width:70px;
+                 height:70px;
+            }
+            @media screen and (max-width:768px) {
+                .dad-image{
+                    margin-top: -270px;
+                    right: 0;
+                    margin-right: 20px;
+                }
+            }
+        </style>
 </head>
 
 <body>
@@ -38,7 +73,7 @@
                         margin-left: 15px;
                         width: 150px;
                         font-size: 18px;
-                        font-weight: 300;">RM Constructions
+                        font-weight: 300;font-family: 'Times New Roman', Times, serif;">RM Constructions
                         <p style="
                         width: 200px;
                         font-size: 16px;
@@ -103,6 +138,9 @@ font-weight: 800;">Builders & Flat Promoters</p>
                                 <a class="link link--single" href="contacts2.html" data-page="contacts2">Contacts 2</a>
                             </div> -->
                         </li>
+                        <div>
+                            <a href="/about.html"><img class="dad-image" src="./img/dad.jpg"></a>
+                        </div>
                         <!-- <li class="list-item">
                             <button class="dropdown-trigger d-inline-flex align-items-center">
                                 Pages <i class="icon-chevron_right icon"></i>
@@ -274,27 +312,25 @@ font-weight: 800;">Builders & Flat Promoters</p>
                                 At RMC we care for ever. Our maintenance services provides effective and valuable
                                 manpower and support to make sure your dreams always stay true.
                             </p>
-                            <!-- <a class="link link-arrow" href="services.html">
+                            <a class="link link-arrow" href="/maintanence.html">
+                                Details
+                                <i class="icon-arrow_right"></i>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services_list-item col-12 col-md-6 col-xxl-6" data-aos="fade-up" data-order="6">
+                        <div class="wrapper d-flex flex-column align-items-start justify-content-between">
+                            <span class="number">05</span>
+                            <h4 class="title">Real Estate</h4>
+                            <p class="description">
+                                You can invest in real estate directly by purchasing a home, rental property or other property, or indirectly through a real estate investment trust (REIT).
+                            </p>
+                            <!-- <a class="link link-arrow" href="single-service.html">
                                 Details
                                 <i class="icon-arrow_right"></i>
                             </a> -->
                         </div>
                     </li>
-                    <!-- <li class="services_list-item col-12 col-md-6 col-xxl-4" data-aos="fade-up" data-order="6">
-                        <div class="wrapper d-flex flex-column align-items-start justify-content-between">
-                            <span class="number">06</span>
-                            <h4 class="title">Specialty Services</h4>
-                            <p class="description">
-                                Tellus elementum sagittis vitae et. Amet justo donec enim diam vulputate ut consequat id
-                                porta nibh
-                                venenatis
-                            </p>
-                            <a class="link link-arrow" href="single-service.html">
-                                Details
-                                <i class="icon-arrow_right"></i>
-                            </a>
-                        </div>
-                    </li> -->
                 </ul>
             </div>
         </section>
@@ -684,7 +720,7 @@ font-weight: 800;">Builders & Flat Promoters</p>
                         </a> -->
                     </div>
                     <div class="team_main col-12 col-lg-6">
-                        <h4>M Health Tito</h4>
+                        <h4>M Health Tito Cyril</h4>
                         <p style="padding-top: 10px; font-family: Archivo,sans-serif;
                         font-weight: 700;
                         color: #ffc631" class="team_main-text" data-aos="fade-right" data-aos-duration="300">
@@ -731,7 +767,7 @@ font-weight: 800;">Builders & Flat Promoters</p>
                                         <span class="team_quote-author_name" style="font-family: Archivo,sans-serif;
                                         font-weight: 700;
                                         color: #ffc631">R Maria Cyril</span>
-                                        <span class="team_quote-author_profession">Founder, RMC Group of Companies,
+                                        <span class="team_quote-author_profession resp-name">Founder, RMC Group of Companies,
                                             India.</span>
                                     </div>
                                 </div>
@@ -1010,7 +1046,7 @@ font-weight: 800;">Builders & Flat Promoters</p>
                             margin-left: 14px;
                             width: 150px;
                             font-size: 18px;
-                            font-weight: 100;">RM Constructions<p style="
+                            font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
                             width: 175px;
                             font-size: 16px;
                             font-family: 'Lato', sans-serif;
