--- a/promoter.html
+++ b/promoter.html
@@ -22,6 +22,24 @@
                 }
             }
         </style>
+            <style>
+                .dad-image{
+                    border-radius: 50%;
+                    border:2px solid #ffc631; 
+                    position: fixed;
+                    margin-top: -24px;
+                    margin-left: 10px;
+                    width:70px;
+                     height:70px;
+                }
+                @media screen and (max-width:768px) {
+                    .dad-image{
+                        margin-top: -270px;
+                        right: 0;
+                        margin-right: 20px;
+                    }
+                }
+            </style>
     </head>
     <body>
         <header class="header primary-bg" data-page="projects">
@@ -33,7 +51,7 @@
                             margin-left: 15px;
                             width: 150px;
                             font-size: 18px;
-                            font-weight: 300;">RM Constructions
+                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
                             <p style="
                             width: 200px;
                             font-size: 16px;
@@ -98,6 +116,9 @@
                                     <a class="link link--single" href="contacts2.html" data-page="contacts2">Contacts 2</a>
                                 </div> -->
                             </li>
+                            <div>
+                                <a href="/about.html"><img class="dad-image" src="./img/dad.jpg"></a>
+                            </div>
                             <!-- <li class="list-item">
                                 <button class="dropdown-trigger d-inline-flex align-items-center">
                                     Pages <i class="icon-chevron_right icon"></i>
@@ -405,7 +426,7 @@
                                </div>
                                <div class="text-wrapper d-flex flex-column justify-content-between">
                                    <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                       RMC Construction @ Thiruvanmiyur
+                                       Sai Flats @ Thiruvanmiyur
                                        <span
                                            class="divider divider--line"
                                            data-aos="slide-right"
@@ -574,7 +595,7 @@
                             </div>
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                    RMC Construction @ ECR
+                                    Beach House @ ECR
                                     <span
                                         class="divider divider--line"
                                         data-aos="slide-right"
@@ -630,7 +651,7 @@
             </div>
             <div class="text-wrapper d-flex flex-column justify-content-between">
                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                    RMC Construction @ Chemmencheri
+                    Manohar Villa @ Chemmencheri
                     <span
                         class="divider divider--line"
                         data-aos="slide-right"
@@ -647,7 +668,7 @@
                         data-aos-once="true"
                     >
                         <i class="icon-location icon"></i>
-                        Chemmencheri, Chennai
+                        Manohar Villa, Chemmencheri, Chennai
                     </span>
                     <a
                         class="link link-arrow"
@@ -742,7 +763,7 @@
                         </div>
                         <div class="text-wrapper d-flex flex-column justify-content-between">
                             <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500" data-aos-once="true">
-                                RMC Construction @ Neelankarai
+                                JS illam @ Neelankarai
                                 <span
                                     class="divider divider--line"
                                     data-aos="slide-right"
@@ -759,7 +780,7 @@
                                     data-aos-once="true"
                                 >
                                     <i class="icon-location icon"></i>
-                                    Beach House,Neelankarai, Chennai
+                                    JS illam, Neelankarai, Chennai
                                 </span>
                                 <a
                                     class="link link-arrow"
@@ -1790,7 +1811,7 @@
                                 margin-left: 14px;
                                 width: 150px;
                                 font-size: 18px;
-                                font-weight: 100;">RM Constructions<p style="
+                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
                                 width: 175px;
                                 font-size: 16px;
                                 font-family: 'Lato', sans-serif;
