--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:wght@100&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="css/blog.min.css" />
+        <style>
+            .dad-image{
+                border-radius: 50%;
+                border:2px solid #ffc631; 
+                position: fixed;
+                margin-top: -24px;
+                margin-left: 10px;
+                width:70px;
+                 height:70px;
+            }
+            @media screen and (max-width:768px) {
+                .dad-image{
+                    margin-top: -270px;
+                    right: 0;
+                    margin-right: 20px;
+                }
+            }
+        </style>
     </head>
+
     <body>
         <header class="header primary-bg" data-page="blog">
             <div class="header_navbar">
@@ -24,7 +43,7 @@
                             margin-left: 15px;
                             width: 150px;
                             font-size: 18px;
-                            font-weight: 300;">RM Constructions
+                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
                             <p style="
                             width: 200px;
                             font-size: 16px;
@@ -89,6 +108,9 @@
                                     <a class="link link--single" href="contacts2.html" data-page="contacts2">Contacts 2</a>
                                 </div> -->
                             </li>
+                            <div>
+                                <a href="/about.html"><img class="dad-image" src="./img/dad.jpg"></a>
+                            </div>
                             <!-- <li class="list-item">
                                 <button class="dropdown-trigger d-inline-flex align-items-center">
                                     Pages <i class="icon-chevron_right icon"></i>
@@ -889,7 +911,7 @@
                                 margin-left: 14px;
                                 width: 150px;
                                 font-size: 18px;
-                                font-weight: 100;">RM Constructions<p style="
+                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
                                 width: 175px;
                                 font-size: 16px;
                                 font-family: 'Lato', sans-serif;
