--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,24 @@
             }
         }
     </style>
+        <style>
+            .dad-image{
+                border-radius: 50%;
+                border:2px solid #ffc631; 
+                position: fixed;
+                margin-top: -24px;
+                margin-left: 10px;
+                width:70px;
+                 height:70px;
+            }
+            @media screen and (max-width:768px) {
+                .dad-image{
+                    margin-top: -270px;
+                    right: 0;
+                    margin-right: 20px;
+                }
+            }
+        </style>
 </head>
 
 <body>
@@ -35,7 +53,7 @@
                             margin-left: 15px;
                             width: 150px;
                             font-size: 18px;
-                            font-weight: 300;">RM Constructions
+                            font-weight: 300;font-family: 'Times New Roman', Times, serif;"">RM Constructions
                         <p style="
                             width: 200px;
                             font-size: 16px;
@@ -100,6 +118,9 @@
                                     <a class="link link--single" href="contacts2.html" data-page="contacts2">Contacts 2</a>
                                 </div> -->
                         </li>
+                        <div>
+                            <a href="/about.html"><img class="dad-image" src="./img/dad.jpg"></a>
+                        </div>
                         <!-- <li class="list-item">
                                 <button class="dropdown-trigger d-inline-flex align-items-center">
                                     Pages <i class="icon-chevron_right icon"></i>
@@ -358,7 +379,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Thiruvanmiyur
+                                    Sai Flats @ Thiruvanmiyur
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -419,6 +440,83 @@
                             </div>
                         </div>
                     </figure>
+                            <!-- 17 -->
+                            <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["institutions"]'>
+                                <div class="projects_list-item" data-order="17">
+                                    <div class="wrapper d-flex flex-wrap justify-content-between">
+                                        <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550"
+                                            data-aos-once="true">
+                                            <picture>
+                                                <source data-srcset="/img/home/home-project/anand.jpeg"
+                                                    srcset="/img/home/home-project/anand.jpeg" type="image/jpg" />
+                                                <img class="projects_list-item_img lazy"
+                                                    data-src="/img/home/home-project/anand.jpeg"
+                                                    src="/img/home/home-project/anand.jpeg" alt="RMC Construction @ " />
+                                            </picture>
+                                        </div>
+                                        <div class="text-wrapper d-flex flex-column justify-content-between">
+                                            <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
+                                                data-aos-once="true">
+                                                ASIS @ Porur
+                                                <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
+                                                    data-aos-once="true"></span>
+                                            </h3>
+                                            <div
+                                                class="projects_list-item_info d-flex flex-wrap align-items-center justify-content-between">
+                                                <span class="location d-flex align-items-center" data-aos="fade-in"
+                                                    data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
+                                                    <i class="icon-location icon"></i>
+                                                    Anand School, Mugalivakkam Road, Porur, Chennai
+                                                </span>
+                                                <a class="link link-arrow" href="single-project.html?name=project17"
+                                                    data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
+                                                    data-aos-once="true">
+                                                    Details
+                                                    <i class="icon-arrow_right"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </figure>
+                               <!-- 30 -->
+                   <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
+                    <div class="projects_list-item" data-order="30">
+                        <div class="wrapper d-flex flex-wrap justify-content-between">
+                            <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550"
+                                data-aos-once="true">
+                                <picture>
+                                    <source data-srcset="/img/home/home-project/vgp.jpg"
+                                        srcset="/img/home/home-project/vgp.jpg" type="image/jpg" />
+                                    <img class="projects_list-item_img lazy" data-src="/img/home/home-project/vgp.jpg"
+                                        src="/img/home/home-project/vgp.jpg" alt="RMC Construction @ " />
+                                </picture>
+                            </div>
+                            <div class="text-wrapper d-flex flex-column justify-content-between">
+                                <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
+                                    data-aos-once="true">
+                                    VGP Second Layout Uthandi @ ECR
+                                    <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
+                                        data-aos-once="true"></span>
+                                </h3>
+                                <div
+                                    class="projects_list-item_info d-flex flex-wrap align-items-center justify-content-between">
+                                    <span class="location d-flex align-items-center" data-aos="fade-in"
+                                        data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
+                                        <i class="icon-location icon"></i>
+                                        VGP Second Layout Uthandi, ECR, Chennai
+                                    </span>
+                                    <a class="link link-arrow" href="single-project.html?name=project30"
+                                        data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
+                                        data-aos-once="true">
+                                        Details
+                                        <i class="icon-arrow_right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </figure>
                       <!-- 10 -->
                       <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                         <div class="projects_list-item" data-order="10">
@@ -495,45 +593,7 @@
                         </div>
                     </div>
                 </figure>
-                    <!-- 17 -->
-                    <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["institutions"]'>
-                        <div class="projects_list-item" data-order="17">
-                            <div class="wrapper d-flex flex-wrap justify-content-between">
-                                <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550"
-                                    data-aos-once="true">
-                                    <picture>
-                                        <source data-srcset="/img/home/home-project/anand.jpeg"
-                                            srcset="/img/home/home-project/anand.jpeg" type="image/jpg" />
-                                        <img class="projects_list-item_img lazy"
-                                            data-src="/img/home/home-project/anand.jpeg"
-                                            src="/img/home/home-project/anand.jpeg" alt="RMC Construction @ " />
-                                    </picture>
-                                </div>
-                                <div class="text-wrapper d-flex flex-column justify-content-between">
-                                    <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
-                                        data-aos-once="true">
-                                        ASIS @ Porur
-                                        <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
-                                            data-aos-once="true"></span>
-                                    </h3>
-                                    <div
-                                        class="projects_list-item_info d-flex flex-wrap align-items-center justify-content-between">
-                                        <span class="location d-flex align-items-center" data-aos="fade-in"
-                                            data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
-                                            <i class="icon-location icon"></i>
-                                            Anand School, Mugalivakkam Road, Porur, Chennai
-                                        </span>
-                                        <a class="link link-arrow" href="single-project.html?name=project17"
-                                            data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
-                                            data-aos-once="true">
-                                            Details
-                                            <i class="icon-arrow_right"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </figure>
+            
                       <!-- 22 -->
                 <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
                     <div class="projects_list-item" data-order="22">
@@ -573,44 +633,7 @@
                         </div>
                     </div>
                 </figure>
-                   <!-- 30 -->
-                   <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["residential"]'>
-                    <div class="projects_list-item" data-order="30">
-                        <div class="wrapper d-flex flex-wrap justify-content-between">
-                            <div class="img-wrapper" data-aos="zoom-in-right" data-aos-duration="550"
-                                data-aos-once="true">
-                                <picture>
-                                    <source data-srcset="/img/home/home-project/vgp.jpg"
-                                        srcset="/img/home/home-project/vgp.jpg" type="image/jpg" />
-                                    <img class="projects_list-item_img lazy" data-src="/img/home/home-project/vgp.jpg"
-                                        src="/img/home/home-project/vgp.jpg" alt="RMC Construction @ " />
-                                </picture>
-                            </div>
-                            <div class="text-wrapper d-flex flex-column justify-content-between">
-                                <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
-                                    data-aos-once="true">
-                                    VGP Second Layout Uthandi @ ECR
-                                    <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
-                                        data-aos-once="true"></span>
-                                </h3>
-                                <div
-                                    class="projects_list-item_info d-flex flex-wrap align-items-center justify-content-between">
-                                    <span class="location d-flex align-items-center" data-aos="fade-in"
-                                        data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
-                                        <i class="icon-location icon"></i>
-                                        VGP Second Layout Uthandi, ECR, Chennai
-                                    </span>
-                                    <a class="link link-arrow" href="single-project.html?name=project30"
-                                        data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
-                                        data-aos-once="true">
-                                        Details
-                                        <i class="icon-arrow_right"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </figure>
+                
                 <!-- 31 -->
                 <figure class="gallery_masonry-item projects_list- col-md-6" data-groups='["institutions"]'>
                     <div class="projects_list-item" data-order="31">
@@ -744,7 +767,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ ECR
+                                    Beach House @ ECR
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -783,7 +806,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Chemmencheri
+                                    Manohar Villa @ Chemmencheri
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -792,7 +815,7 @@
                                     <span class="location d-flex align-items-center" data-aos="fade-in"
                                         data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
                                         <i class="icon-location icon"></i>
-                                        Chemmencheri, Chennai
+                                        Manohar Villa, Chemmencheri, Chennai
                                     </span>
                                     <a class="link link-arrow" href="single-project.html?name=project35"
                                         data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
@@ -863,7 +886,7 @@
                             <div class="text-wrapper d-flex flex-column justify-content-between">
                                 <h3 class="projects_list-item_title" data-aos="fade-in" data-aos-duration="500"
                                     data-aos-once="true">
-                                    RMC Construction @ Neelankarai
+                                    JS illam @ Neelankarai
                                     <span class="divider divider--line" data-aos="slide-right" data-aos-duration="500"
                                         data-aos-once="true"></span>
                                 </h3>
@@ -872,7 +895,7 @@
                                     <span class="location d-flex align-items-center" data-aos="fade-in"
                                         data-aos-duration="500" data-aos-delay="50" data-aos-once="true">
                                         <i class="icon-location icon"></i>
-                                        Beach House,Neelankarai, Chennai
+                                        JS illam, Neelankarai, Chennai
                                     </span>
                                     <a class="link link-arrow" href="single-project.html?name=project37"
                                         data-aos="fade-in" data-aos-duration="500" data-aos-delay="50"
@@ -1645,7 +1668,7 @@
                                 margin-left: 14px;
                                 width: 150px;
                                 font-size: 18px;
-                                font-weight: 100;">RM Constructions<p style="
+                                font-weight: 100;font-family: 'Times New Roman', Times, serif;"">RM Constructions<p style="
                                 width: 175px;
                                 font-size: 16px;
                                 font-family: 'Lato', sans-serif;
